# gp-basic-songchooser

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  LibMain.cpp  LibMain.h  README.md  build.cmd  build.sh  gpcopy.cmd  release.cmd  webcontent.h
.github/workflows/: build.yaml
content/: index.html
embedding/: BouldenDigitalSiteIcon.png.hpp  all.hpp  index.html.hpp
